--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,81 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>民航行程推荐</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
+    <div class="header ban">logo</div>
+    <div class="search ban">
+        <div class="search-address">
+            <div class="address-1"><span>出发点&nbsp&nbsp</span>
+                <input type="text"></div>
+             <div class="address-2"><span>目的地&nbsp&nbsp</span>
+                <input type="text"></div>
+        </div>
+        <div class="search-time">
+            <div class="time-1"><span>出发时间&nbsp&nbsp</span>
+                <input type="text"></div>
+                <div  class="time-2"><span>抵达时间&nbsp&nbsp</span>
+                    <input type="text"></div>
+        </div>
+        <div class="search-child">
+            <span>是否携带孩子:</span>
+            <input type="radio" name="name">带
+            <input type="radio" name="name">不带
+        </div>
+    </div>
+    <div class="date ban">3</div>
+    <div class="show ban">
+         <div class="show-nav">4
+            <span class="show-nav-span">
+                <button>去</button>
+                <button>回</button>
+            </span>
+            <form class="show-nav-info">
+                <ul>
+                    <li>
+                       <select name="aaa" id="" >
+                           <option value="" selected="selected">东方航空</option>
+                       </select>
+                    </li>
+                    <li>
+                      <select name="" id="" >
+                          <option value="" selected="selected">8:00-10:00</option>
+                      </select>
+                    </li>
+                    <li>
+                      <select name="" id="">
+                          <option value="" selected="selected">C舱</option>
+                      </select>
+                    </li>
+                    <li>
+                      <select name="" id="">
+                          <option value="" selected="selected">A-11</option>
+                      </select>
+                    </li>
+                </ul>
+               <ul class="show-nav-sort">
+                   <li><a href="#">低价优先</a></li>
+                   <li><a href="#">时间优先</a></li>
+                   <li><a href="#">准点率优先</a></li>
+               </ul>
+            </form>
+        </div>
+         <div class="show-body">5
+             <ul>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+             </ul>
+         </div>
+    </div>
 </body>
 </html>
