--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,15 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="author" content="Author">
+    <meta name="viewport" content="width=device-width,initid-scale=1.0,user-scalable">
+    <title>民航推荐网站</title>
     <link rel="stylesheet" href="../static/index.css">
+    <script src="../static/index.js"></script>
 </head>
 <body>
     <div class="header ban">logo</div>
