--- a/templates/login.html
+++ b/templates/login.html
@@ -28,8 +28,15 @@
            <input type="button" class="send-btn" value="发送">
             </span>
         </div>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <button type="button" id="login-btn">登录</button>
-        <a class="" href="..\templates\register.html"><h6>还没有账户？前往注册</h6></a>
+        <a class="" href={{url_for('register')}}><h6>还没有账户？前往注册</h6></a>
        </form>
     </div>
 </body>
