--- a/templates/register.html
+++ b/templates/register.html
@@ -23,8 +23,10 @@
                 <input name="password" type="password" id="password" placeholder="验证码"/>
                 <input type="button" class="send-btn" value="发送">
             </span>
+            <p class="codefail">&nbsp</p>
+            <!-- 注册状态消息 -->
         </div>
-        <input type="submit" value="注册">
+        <input type="button" value="注册" id="reg">
       </form>
     </div>
 </body>
