--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <script src="..\static\s-js\index.js"></script>
 </head>
 <body>
-    <div class="header ban">logo</div>
+    <div class="header ban"></div>
     <!-- 选择出发地 时间 -->
     <div class="search ban">
         <div class="search-address">
