the 16th commit

--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>注册</title>
+    <title>民航网</title>
     <link rel="stylesheet" href="..\static\s-css\register.css">
     <script src="..\static\s-js\jquery.min.js"></script>
 </head>
