--- a/static/s-css/register.css
+++ b/static/s-css/register.css
@@ -1,33 +1,81 @@
-*{
-    margin: 0%;
-    padding: 0%;
-}
-body{
-    background-image: url(../s-other/737.jpg);
-    background-size: cover;
-    background-repeat:no-repeat;
-}
-.register{
-    position: relative;
-    margin: auto;
-    width: 500px;
-    height: 500px;
-}
-.form-sign{
-    position: absolute;
-    bottom: 0px;
-    left: 150px;
-}
-.send-btn{
-  color: black;
-}
-.send-btn2{
-    pointer-events: none;
-    background-color: red;
-}
-.codefail{
-    color: red;
-}
-.codefail2{
-    color:green;
-}
+
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        html {
+            height: 100%;
+        }
+        body{
+          background-image: url(../s-other/1.png);
+          background-size: cover;       
+          background-repeat:no-repeat;
+          height: 100%;
+         }
+        .app {
+            height: 100%;
+        }
+        .login-wrapper {
+            background: rgba(0, 0, 0, 0.5);
+            width: 358px;
+            height: 588px;
+            border-radius: 15px;
+            padding: 0 50px;
+            position: relative;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+        .login {
+            font-size: 38px;
+            font-weight: bold;
+            text-align: center;
+            line-height: 200px;
+        }
+        #username{
+            display: block;
+            width: 100%;
+            margin-bottom: 20px;
+            border: 0;
+            padding: 10px;
+            border-bottom: 1px solid rgb(128, 125, 125);
+            font-size: 15px;
+            outline: none;
+        }
+        #password{
+            display: block;
+            width: 100%;
+            margin-bottom: 20px;
+            border: 0;
+            padding: 10px;
+            border-bottom: 1px solid rgb(128, 125, 125);
+            font-size: 15px;
+            outline: none;
+        }
+        #reg {
+            text-align: center;
+            padding: 10px;
+            width: 100%;
+            margin-top: 40px;
+            border-radius: 3px;
+            background-image: linear-gradient(to right, #a6c1ee, #fbc2eb);
+            color: #fff;
+            border: none;
+        }
+        .send-btn{
+           color: black;
+           width: 80px;
+           height: 50px;
+        }
+        .send-btn2{
+             pointer-events: none;
+             background-color: brown;
+             width: 80px;
+             height: 50px;
+        }
+        .codefail{
+            color: red;
+        }
+        .codefail2{
+            color: green;
+        }
