--- a/templates/register.html
+++ b/templates/register.html
@@ -17,6 +17,7 @@
             <div class="login">用户注册</div>
             <div class="form-wrapper">
                 <input name="email" type="email" id="username" placeholder="邮箱" />
+                <p class="info">&nbsp</p>
                 <input name="password" type="text" id="password" placeholder="验证码" />
                 <input type="button" class="send-btn" value="发送">
                 <button type="button" id="reg">注册</button>
@@ -26,5 +27,5 @@
         </div>
     </div>
 </body>
-<script src="..\static\s-js\login.js"></script>
+<script src="..\static\s-js\register.js"></script>
 </html>
