--- a/templates/index.html
+++ b/templates/index.html
@@ -106,6 +106,7 @@
             <div class="nav2">
                 <!-- 2 -->
                 <form class="show-nav-info">
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
                     <ul>
                         <li>
                             <select name="aaa" id="" onchange="reqsecond()">
