--- a/templates/settlement.html
+++ b/templates/settlement.html
@@ -1,10 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="../static/s-css/settle.css">
+</head>
+
+<body>
+  <div class="passenger">
+    <h2>订单
+    </h2>
+  </div>
+  <div class="order">
+    <div class="info">
+      <div class="time">
+        5月4号 08：25
+      </div>
+      <div class="flight">
+        <div class="plane">
+          <p>中国南航</p>
+          <p>CZ6259</p>
+        </div>
+        <div class="addf">
+          <h3>哈尔滨</h3>
+          <p>08：25</p>
+        </div>
+        <div class="pho">
+          <p>------></p>
+          <p>3小时15分</p>
+        </div>
+        <div class="adds">
+          <h3>杭州</h3>
+          <p>11：40</p>
+        </div>
+      </div>
+      <div class="card">
+        <table border="1" cellspacing="5">
+          <tr class="app">
+            <td>旅客姓名</td>
+            <td>日期</td>
+            <td>座位号</td>
+            <td>座位类型</td>
+            <td>价格</td>
+          </tr>
+          <tr class="app2">
+            <td>赵飞扬</td>
+            <td>4月28号周三</td>
+            <td>49C</td>
+            <td>普通座位</td>
+            <td>0里程</td>
+          </tr>
+        </table>
+
+      </div>
+    </div>
+    <!-- 2 -->
+    <div class="info2">
+      <div class="time2">
+        5月4号 08：25
+      </div>
+      <div class="flight2">
+        <div class="plane2">
+          <p>中国南航</p>
+          <p>CZ6259</p>
+        </div>
+        <div class="addf2">
+          <h3>哈尔滨</h3>
+          <p>08：25</p>
+        </div>
+        <div class="pho2">
+          <p>------></p>
+          <p>3小时15分</p>
+        </div>
+        <div class="adds2">
+          <h3>杭州</h3>
+          <p>11：40</p>
+        </div>
+      </div>
+      <div class="card2">
+        <table border="1" cellspacing="5">
+          <tr class="app3">
+            <td>旅客姓名</td>
+            <td>日期</td>
+            <td>座位号</td>
+            <td>座位类型</td>
+            <td>价格</td>
+          </tr>
+          <tr class="app4">
+            <td>赵飞扬</td>
+            <td>4月28号周三</td>
+            <td>49C</td>
+            <td>普通座位</td>
+            <td>0里程</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <div class="money">
+      <div class="mon">
+        <span>￥</span>
+      <h2 class="offer">1200</h2>
+      </div>
+    </div>
+  </div>
 </body>
+<script>
+  setInterval(function () {
+    location.reload();
+  }, 1000)
+</script>
+
 </html>
