--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,9 +12,12 @@
     <link rel="shortcut icon" href="../static/s-other/logo.ico" />
     <link rel="stylesheet" href="..\static\s-css\index.css">
     <script src="..\static\s-js\jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="all" href="../static/s-css/tyle.css">
+		
 </head>
-
 <body>
+    <div id="in_city" style="display: none"></div>
+    <!-- 组件 -->
     <div class="header ban">
         <h1 class="logo">&nbsp&nbsp&nbsp中国民航</h1>
         <div class="title">
@@ -27,20 +29,19 @@
         <p class="ico"></p>
         <div class="search-address">
             <div class="address-start"><span>出发点&nbsp&nbsp</span>
-                <input type="text" class="input">
+                <input type="text" id="abc">
             </div>
-            <div class="address-end"><span>目的地&nbsp&nbsp</span>
-                <input type="text" class="input">
+               <div class="address-end"><span>目的地&nbsp&nbsp</span>
+                <input type="text" id="lll">
             </div>
         </div>
         <p class="ico2"></p>
         <div class="search-time">
             <div class="time-start"><span>出发时间&nbsp&nbsp</span>
-                <input type="datetime-local" class="input">
+                <input type="date" class="input">
             </div>
             <div class="time-end"><span>抵达时间&nbsp&nbsp</span>
-                <input type="datetime-local" class="input">
-
+                <input type="date" class="input">
             </div>
         </div>
         <div class="chazhao">
@@ -95,6 +96,14 @@
                                 <option value="" selected="selected">A-11</option>
                             </select>
                         </li>
+                        <li>
+                            <input type="button" class="chaxun" value="查询按钮">
+                            <!-- 查询按钮 -->
+                        </li>
+                        <li>
+                            <input type="button" class="pay" value="结算">
+                            <!-- 查询按钮 -->
+                        </li>
                     </ul>
                     <ul class="show-nav-sort">
                         <li><a href="#">低价优先</a></li>
@@ -137,6 +146,14 @@
                                 <option value="" selected="selected">A-11</option>
                             </select>
                         </li>
+                        <li>
+                            <input type="button" class="chaxun" value="查询按钮">
+                            <!-- 查询按钮 -->
+                        </li>
+                        <li>
+                            <input type="button" class="pay" value="结算">
+                            <!-- 查询按钮 -->
+                        </li>
                     </ul>
                     <ul class="show-nav-sort">
                         <li><a href="#">低价优先</a></li>
@@ -154,7 +171,12 @@
         </div>
         <div class="show-body2">4
             <ul class="info2">
-                <li></li>
+                <li>
+                    <div class="hangban"></div>
+                    <div class="finfo"></div>
+                    <div class="photo"></div>
+                    <div class="finfo2"></div>
+                </li>
                 <li></li>
                 <li></li>
                 <li></li>
@@ -166,6 +188,70 @@
         </div>
     </div>
 </body>
-<script src="../static/s-js/index.js"></script>
+	<script type="text/javascript" src="../static/s-js/cityTemplate.js"></script>
+	<script type="text/javascript">
+	    var cityA = $(".city_a_le1 a"); //城市
+	    var pla = $("#abc");  //出发地
+	    var dest = $("#lll");  //目的地
+	    // 默认值
+	    inCity.width = "345";  //城市选择框  宽
+	    inCity.height = "auto";  //城市选择框  高
+	    inCity.id = "#in_city";  //城市选择框  父级ID
+	    inCity.Children = '.city_a_le1';  //城市名box
+	    // 初始化 城市HTML模板
+	    $(inCity.id).prepend(inCity._template.join(''));
+	    inCity.Hot(cityA);
+	    
+	    //城市 导航
+	    var apay = $(".screen a");
 
+	    var placeThis; //当前选择标签
+	    apay.click(function(obj){  //城市导航
+	        inCity.payment($(this));
+	    })
+
+	    inCity.place(pla); //出发地
+	    inCity.destination(dest);  //目的地
+	    inCity.cityClick(cityA); //显示赋值城市
+	</script>
+    <!-- input组件 -->
+<script>
+    var csrf_token = $("csrf-token").val();
+var gobtn = document.getElementById('gobtn');
+var backbtn = document.getElementById('backbtn');
+var navf = document.getElementsByClassName('nav0')[0];
+var navs = document.getElementsByClassName('nav2')[0];
+var showbodyf = document.getElementsByClassName('show-body0')[0];
+var showbodys = document.getElementsByClassName('show-body2')[0];
+gobtn.addEventListener('click', function () {
+    navf.className = "nav0";
+    navs.className = "nav2";
+    gobtn.style.backgroundColor = 'red';
+    backbtn.style.backgroundColor = '';
+    showbodys.className = 'show-body2';
+    showbodyf.className = 'show-body0';
+});
+backbtn.addEventListener('click', function () {
+    navs.className = "nav0";
+    navf.className = "nav2";
+    backbtn.style.backgroundColor = 'red';
+    gobtn.style.backgroundColor = '';
+    showbodys.className = 'show-body0';
+    showbodyf.className = 'show-body2';
+});
+var btn=document.getElementsByClassName('chaxun')[0];
+btn.addEventListener('click',function(){
+    location.href='./wait.html';
+    //这个路径你改成后端
+})
+var pay=document.getElementsByClassName('pay')[0];
+pay.addEventListener('click',function(){
+    location.href='./settlement.html';
+    //这个路径你改成后端
+})
+</script>
+<script type="text/javascript">
+    var app = angular.module('app',["wui.date"]);
+</script>
+<script src="../static/s-js/index.js"></script>
 </html>
