the 24th commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,11 @@
 		
 </head>
 <body>
+    <div id="information">
+        <img src="{{ avatars.default() }}">
+        <h1>{{ email }}</h1>
+        <a href="{{ exit_url }}"></a>
+    </div>
     <div id="in_city" style="display: none"></div>
     <!-- 组件 -->
     <div class="header ban">
@@ -23,6 +28,7 @@
         <div class="title">
             <h1>欢迎使用中国民航旅行航班推荐系统！</h1>
         </div>
+
     </div>
     <!-- 选择出发地 时间 -->
     <div class="search ban">
