--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
                     <ul>
                         <li>
-                            <select name="aaa" id="" onchange="reqsecond()">
+                            <select name="aaa" id="" onchange="reqsecond(this.value)">
                                 <option value="" selected="selected">东方航空</option>
                                 <option value="">九元航空</option>
                                 <option value="">南方航空</option>
@@ -85,20 +85,20 @@
                             </select>
                         </li>
                         <li>
-                            <select name="" id="" onchange="reqsecond()">
+                            <select name="" id="" onchange="reqsecond(this.value)">
                                 <option value="" selected="selected">06:00-12:00</option>
                                 <option value="">12:00-18:00</option>
                                 <option value="">18:00-24:00</option>
                             </select>
                         </li>
                         <li>
-                            <select name="" id="" onchange="reqsecond()">
+                            <select name="" id="" onchange="reqsecond(this.value)">
                                 <option value="" selected="selected">经济舱</option>
                                 <option value="">公务/头等舱</option>
                             </select>
                         </li>
                         <li>
-                            <select name="" id="" onchange="reqsecond()">
+                            <select name="" id="" onchange="reqsecond(this.value)">
                                 <option value="" selected="selected">A-11</option>
                             </select>
                         </li>
@@ -124,7 +124,7 @@
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
                     <ul>
                         <li>
-                            <select name="aaa" id="" onchange="reqsecond()">
+                            <select name="aaa" id="" onchange="reqsecond(this.value)">
                                 <option value="" selected="selected">东方航空</option>
                                 <option value="">九元航空</option>
                                 <option value="">南方航空</option>
@@ -135,20 +135,20 @@
                             </select>
                         </li>
                         <li>
-                            <select name="" id="" onchange="reqsecond()">
+                            <select name="" id="" onchange="reqsecond(this.value)">
                                 <option value="" selected="selected">06:00-12:00</option>
                                 <option value="">12:00-18:00</option>
                                 <option value="">18:00-24:00</option>
                             </select>
                         </li>
                         <li>
-                            <select name="" id="" onchange="reqsecond()">
+                            <select name="" id="" onchange="reqsecond(this.value)">
                                 <option value="" selected="selected" >经济舱</option>
                                 <option value="">公务/头等舱</option>
                             </select>
                         </li>
                         <li>
-                            <select name="" id="" onchange="reqsecond()">
+                            <select name="" id="" onchange="reqsecond(this.value)">
                                 <option value="" selected="selected">A-11</option>
                             </select>
                         </li>
